// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing SlideUp component component renders invisible 1`] = `
<AnimatedComponent
  duration={300}
  startWhen={false}
  style={
    Object {
      "transform": Array [
        Object {
          "translateY": 300,
        },
        Object {
          "perspective": 1000,
        },
      ],
    }
  }
/>
`;

exports[`Testing SlideUp component component renders visible 1`] = `
<AnimatedComponent
  duration={300}
  startWhen={true}
  style={
    Object {
      "transform": Array [
        Object {
          "translateY": 300,
        },
        Object {
          "perspective": 1000,
        },
      ],
    }
  }
/>
`;
